# claude-code-test

./: CLAUDE.md  Makefile  frontend-changes.md  pyproject.toml
.claude/: settings.local.json
backend/: ai_generator.py  app.py  document_processor.py  rag_system.py  search_tools.py
frontend/: index.html  script.js  style.css
scripts/: format-code.ps1  format-code.sh  quality-check.ps1  quality-check.sh
